# ProyectoEstructura

./: CMakeLists.txt  README.md  Torreta.c  Torreta.h  list.c  list.h  main.c
cmake_modules/: FindSDL2TTF.cmake
